# http_logs_consumer

./: README.md
src/: .env.example  .gitignore  config.py  launch_server.py  pyproject.toml  stdin_proxy_client.py
src/components/: __init__.py  redis_client.py  server_with_stats.py
src/components/base/: server.py
src/components/handlers/: __init__.py  base_handler.py  http_status_handler.py
src/components/items/: __init__.py  http_status_item.py
src/tests/: conftest.py  test_server.py
src/utils/: __init__.py  logging.py
